tests/compile-fail/compile_fail__pseudo_non_const.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: non-const pseudo-arg
   ┌─ <input>:29:20
   │
29 │         wait(@mask=I0, @args="10270000");
   │                    ^^ non-const pseudo-arg


